# mirath

./: .gitignore
Reference_Implementation/mirath_tcith/: CMakeLists.txt  README.md  parameter_sizes.py
Reference_Implementation/mirath_tcith/src/: ToDos.md  api.h  mirath_matrix_ff.c  mirath_matrix_ff.h  mirath_parameters.h  mirath_sign.c  mirath_sign.h  mirath_tcith.c  mirath_tcith.h  mirath_tree.c  mirath_tree.h  params.h  vector_ff_mu.c  vector_ff_mu.h
Reference_Implementation/mirath_tcith/src/arith/: ff.h  ff_mu.h  ff_mu3.h  matrix_ff_arith.h  matrix_ff_mu.h  mirath_arith.h  vector_arith_ff.h  vector_arith_ff_mu.h  vector_ff_arith.h  vector_ff_mu.h
Reference_Implementation/mirath_tcith/src/arith/q2/: data_type.h  matrix_ff_mu.h  vector_ff_mu.h
Reference_Implementation/mirath_tcith/src/arith/q_16/: data_type.h  matrix_ff_mu.h  vector_ff_mu.h
Reference_Implementation/mirath_tcith/src/arith/q_16/mu_fast/: ff_mu.h
Reference_Implementation/mirath_tcith/src/arith/q_16/mu_short/: ff_mu3.h
Reference_Implementation/mirath_tcith/src/arith/q_2/: matrix_ff_arith.h  matrix_ff_mu.h  vector_ff_mu.h
Reference_Implementation/mirath_tcith/src/arith/q_2/mu_fast/: ff_mu.h
Reference_Implementation/mirath_tcith/src/arith/q_2/mu_short/: ff_mu.h
Reference_Implementation/mirath_tcith/src/common/: KeccakHash.h  KeccakP-1600-times4-SIMD256.c  KeccakP-1600-times4-SnP.h  fips202.h  hash.c  hash.h  parsing.c  parsing.h  prng.c  prng.h  random.c  random.h
Reference_Implementation/mirath_tcith/src/q_16/: ff_mu.h
Reference_Implementation/mirath_tcith/src/q_2/: ff.h  ff_mu.h  matrix_ff_arith.h  matrix_ff_mu.h
Reference_Implementation/mirath_tcith/src/tests/: test_arith.c  test_mirath.c  test_tree.c  tests_arith.c  tests_tree.c
